Applied changes for a master-details page

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Colors.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Colors.xaml
@@ -5,10 +5,12 @@
 
 		<!-- Light Theme -->
 		<ResourceDictionary x:Key="Light">
+			<Color x:Key="Color01">Black	</Color>
 		</ResourceDictionary>
 
 		<!-- Dark Theme -->
 		<ResourceDictionary x:Key="Dark">
+			<Color x:Key="Color01">White</Color>
 		</ResourceDictionary>
 		
 	</ResourceDictionary.ThemeDictionaries>
@@ -20,6 +22,9 @@
 
 		ex: <SolidColorBrush x:Key="..." Color="{ThemeResource Material...}" />
 	-->
+
+	<SolidColorBrush x:Key="Color01Brush"
+					 Color="{ThemeResource Color01}" />
 
 	<SolidColorBrush x:Key="DividerBrush"
 					 Color="{ThemeResource MaterialOnSurfaceColor}"
