--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
@@ -27,7 +27,7 @@
 						   Height="50"
 						   Stretch="Uniform"
 						   HorizontalAlignment="Center"
-						   VerticalAlignment="Center"/>
+						   VerticalAlignment="Center" />
 
 					<ToggleButton x:Name="DarkLightModeToggle"
 								  Content="Light and Dark"
@@ -41,7 +41,7 @@
 			<muxc:NavigationView.Header>
 				<TextBlock />
 			</muxc:NavigationView.Header>
-			
+
 			<muxc:NavigationView.MenuItems>
 				<muxc:NavigationViewItem Tag="TreeViewPage">
 					<StackPanel Orientation="Horizontal">
@@ -63,19 +63,19 @@
 						<TextBlock Text="DataGrid" />
 					</StackPanel>
 				</muxc:NavigationViewItem>
+				<muxc:NavigationViewItem Tag="MasterDetailsPage">
+					<StackPanel Orientation="Horizontal">
+						<Path Width="16"
+							  Stretch="Uniform"
+							  Margin="0,0,8,0"
+							  Fill="{StaticResource UnoGreenColor}"
+							  Data="{StaticResource IconMasterDetails}" />
+						<TextBlock Text="Master-Details" />
+					</StackPanel>
+				</muxc:NavigationViewItem>
 			</muxc:NavigationView.MenuItems>
 
 			<Frame x:Name="ContentFrame"></Frame>
 		</muxc:NavigationView>
-
-		<!--<toolkit:TabView Grid.Column="1">
-			<toolkit:TabViewItem Header="Mountain Data">
-				
-			</toolkit:TabViewItem>
-			
-			<toolkit:TabViewItem Header="Tab 2">
-
-			</toolkit:TabViewItem>
-		</toolkit:TabView>-->
 	</Grid>
 </Page>
