--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Controls/ToggleButton.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Styles/Controls/ToggleButton.xaml
@@ -69,7 +69,7 @@
 							  Width="24"
 							  Height="24"
 							  HorizontalAlignment="Left"
-							  Data="{StaticResource LightModeIcon}"
+							  Data="{StaticResource IconLightMode}"
 							  Margin="4,0,0,0" />
 
 						<Path x:Name="DarkSymbol"
@@ -77,7 +77,7 @@
 							  Width="24"
 							  Height="24"
 							  HorizontalAlignment="Right"
-							  Data="{StaticResource DarkModeIcon}"
+							  Data="{StaticResource IconDarkMode}"
 							  Opacity="0"
 							  Margin="0,0,4,0" />
 					</Grid>
