Added a page for the TabView

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
@@ -90,6 +90,18 @@
 					</muxc:NavigationViewItem.MenuItems>
 				</muxc:NavigationViewItem>
 
+				<!-- TabView -->
+				<muxc:NavigationViewItem Tag="TabViewPage">
+					<StackPanel Orientation="Horizontal">
+						<Path Width="16"
+							  Stretch="Uniform"
+							  Margin="0,0,8,0"
+							  Fill="{StaticResource UnoGreenColor}"
+							  Data="{StaticResource IconTabView}" />
+						<TextBlock Text="TabView" />
+					</StackPanel>
+				</muxc:NavigationViewItem>
+
 				<!-- Master Details -->
 				<muxc:NavigationViewItem Tag="MasterDetailsPage">
 					<StackPanel Orientation="Horizontal">
