Added the TwoPaneView page

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
@@ -113,6 +113,18 @@
 						<TextBlock Text="Master-Details" />
 					</StackPanel>
 				</muxc:NavigationViewItem>
+
+				<!-- TwoPaneView -->
+				<muxc:NavigationViewItem Tag="TwoPaneViewPage">
+					<StackPanel Orientation="Horizontal">
+						<Path Width="16"
+							  Stretch="Uniform"
+							  Margin="0,0,8,0"
+							  Fill="{StaticResource UnoGreenColor}"
+							  Data="{StaticResource IconSplit}" />
+						<TextBlock Text="TwoPaneView" />
+					</StackPanel>
+				</muxc:NavigationViewItem>
 			</muxc:NavigationView.MenuItems>
 
 			<Frame x:Name="ContentFrame"></Frame>
