--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TabViewPage.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TabViewPage.xaml
@@ -4,12 +4,13 @@
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 	  xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
+	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  mc:Ignorable="d">
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<toolkit:TabView Grid.Column="1">
-			<toolkit:TabViewItem>
-				<toolkit:TabViewItem.Header>
+		<muxc:TabView Grid.Column="1">
+			<muxc:TabViewItem>
+				<muxc:TabViewItem.Header>
 					<StackPanel Orientation="Horizontal">
 						<Path Data="{StaticResource IconTab1}"
 							  Stretch="Uniform"
@@ -18,7 +19,7 @@
 						<TextBlock Margin="0,0,10,0" />
 						<TextBlock Text="Donec enim" />
 					</StackPanel>
-				</toolkit:TabViewItem.Header>
+				</muxc:TabViewItem.Header>
 
 				<StackPanel Margin="16"
 							Spacing="16">
@@ -30,10 +31,10 @@
 					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus non enim praesent elementum. Lacinia quis vel eros donec ac odio. Mi in nulla posuere sollicitudin aliquam. Porttitor leo a diam sollicitudin tempor id eu nisl."
 							   TextWrapping="Wrap" />
 				</StackPanel>
-			</toolkit:TabViewItem>
+			</muxc:TabViewItem>
 
-			<toolkit:TabViewItem>
-				<toolkit:TabViewItem.Header>
+			<muxc:TabViewItem>
+				<muxc:TabViewItem.Header>
 					<StackPanel Orientation="Horizontal">
 						<Path Data="{StaticResource IconTab2}"
 							  Stretch="Uniform"
@@ -42,7 +43,7 @@
 						<TextBlock Margin="0,0,10,0" />
 						<TextBlock Text="Sagittis aliquam" />
 					</StackPanel>
-				</toolkit:TabViewItem.Header>
+				</muxc:TabViewItem.Header>
 
 				<StackPanel Margin="16"
 							Spacing="16">
@@ -53,10 +54,10 @@
 
 					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Tempus urna et pharetra pharetra." TextWrapping="Wrap" />
 				</StackPanel>
-			</toolkit:TabViewItem>
+			</muxc:TabViewItem>
 
-			<toolkit:TabViewItem>
-				<toolkit:TabViewItem.Header>
+			<muxc:TabViewItem>
+				<muxc:TabViewItem.Header>
 					<StackPanel Orientation="Horizontal">
 						<Path Data="{StaticResource IconTab3}"
 							  Stretch="Uniform"
@@ -65,7 +66,7 @@
 						<TextBlock Margin="0,0,10,0" />
 						<TextBlock Text="Non quam" />
 					</StackPanel>
-				</toolkit:TabViewItem.Header>
+				</muxc:TabViewItem.Header>
 
 				<StackPanel Margin="16"
 							Spacing="16">
@@ -77,7 +78,7 @@
 					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis in eu mi bibendum neque. Leo vel orci porta non pulvinar." TextWrapping="Wrap" />
 				</StackPanel>
 
-			</toolkit:TabViewItem>
-		</toolkit:TabView>
+			</muxc:TabViewItem>
+		</muxc:TabView>
 	</Grid>
 </Page>
