feat: added sample for splash screen

--- a/UI/SplashScreenSample/SplashScreenSample.iOS/LaunchScreen.storyboard
+++ b/UI/SplashScreenSample/SplashScreenSample.iOS/LaunchScreen.storyboard
@@ -17,11 +17,11 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" colorSpace="custom" customColorSpace="sRGB" red="1" green="1" blue="1" alpha="1"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="56" translatesAutoresizingMaskIntoConstraints="NO" image="SplashScreen.png">
-                                <rect key="frame" x="58" y="120" width="204" height="242"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="56" translatesAutoresizingMaskIntoConstraints="NO" image="Assets/SplashScreen.png">
+                                <rect key="frame" x="58" y="120" width="216" height="148"/>
                                 <constraints>
-                                    <constraint id="91" firstItem="56" firstAttribute="width" constant="204"/>
-                                    <constraint id="92" firstItem="56" firstAttribute="height" constant="242"/>
+                                    <constraint id="91" firstItem="56" firstAttribute="width" constant="216"/>
+                                    <constraint id="92" firstItem="56" firstAttribute="height" constant="148"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -37,12 +37,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="iPhone-40x40@3x.png" width="40" height="40"/>
-        <image name="iPhone-60x60@2x.png" width="60" height="60"/>
-        <image name="iPad-76x76@2x.png" width="76" height="76"/>
-        <image name="iPhone-40x40@3x.png" width="40" height="40"/>
-        <image name="Icon-Small.png" width="29" height="29"/>
-        <image name="SplashScreen.png" width="620" height="300"/>
+        <image name="Assets/SplashScreen.png" width="216" height="148"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
