--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/MasterDetailsPage.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/MasterDetailsPage.xaml
@@ -3,7 +3,7 @@
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  xmlns:data="using:Microsoft.Toolkit.Uwp.SampleApp.Data"
+	  xmlns:data="using:WCTdataTreeTabSample.DataGrid.SampleData"
 	  mc:Ignorable="d">
 
 	<Page.Resources>
