Added the Expander page

--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TabViewPage.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Pages/TabViewPage.xaml
@@ -3,12 +3,11 @@
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	  xmlns:toolkit="using:Microsoft.Toolkit.Uwp.UI.Controls"
 	  xmlns:muxc="using:Microsoft.UI.Xaml.Controls"
 	  mc:Ignorable="d">
 
 	<Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-		<muxc:TabView Grid.Column="1">
+		<muxc:TabView>
 			<muxc:TabViewItem>
 				<muxc:TabViewItem.Header>
 					<StackPanel Orientation="Horizontal">
@@ -52,7 +51,8 @@
 							   FontWeight="Bold"
 							   Foreground="{ThemeResource UnoPurpleColorBrush}" />
 
-					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Tempus urna et pharetra pharetra." TextWrapping="Wrap" />
+					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis. Tempus urna et pharetra pharetra."
+							   TextWrapping="Wrap" />
 				</StackPanel>
 			</muxc:TabViewItem>
 
@@ -75,7 +75,8 @@
 							   FontWeight="Bold"
 							   Foreground="{ThemeResource UnoPurpleColorBrush}" />
 
-					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis in eu mi bibendum neque. Leo vel orci porta non pulvinar." TextWrapping="Wrap" />
+					<TextBlock Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Turpis in eu mi bibendum neque. Leo vel orci porta non pulvinar."
+							   TextWrapping="Wrap" />
 				</StackPanel>
 
 			</muxc:TabViewItem>
