--- a/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
+++ b/UI/WCTDataTreeTabSample/WCTDataTreeTabSample/WCTDataTreeTabSample.Shared/Shell.xaml
@@ -43,18 +43,6 @@
 			</muxc:NavigationView.Header>
 
 			<muxc:NavigationView.MenuItems>
-				<!-- TreeView -->
-				<muxc:NavigationViewItem Tag="TreeViewPage">
-					<StackPanel Orientation="Horizontal">
-						<Path Width="20"
-							  Stretch="Uniform"
-							  Margin="0,0,8,0"
-							  Fill="{StaticResource UnoGreenColor}"
-							  Data="{StaticResource IconTree}" />
-						<TextBlock Text="TreeView" />
-					</StackPanel>
-				</muxc:NavigationViewItem>
-				
 				<!-- DataGrid -->
 				<muxc:NavigationViewItem>
 					<StackPanel Orientation="Horizontal">
@@ -90,6 +78,18 @@
 					</muxc:NavigationViewItem.MenuItems>
 				</muxc:NavigationViewItem>
 
+				<!-- TreeView -->
+				<muxc:NavigationViewItem Tag="TreeViewPage">
+					<StackPanel Orientation="Horizontal">
+						<Path Width="20"
+							  Stretch="Uniform"
+							  Margin="0,0,8,0"
+							  Fill="{StaticResource UnoGreenColor}"
+							  Data="{StaticResource IconTree}" />
+						<TextBlock Text="TreeView" />
+					</StackPanel>
+				</muxc:NavigationViewItem>
+
 				<!-- TabView -->
 				<muxc:NavigationViewItem Tag="TabViewPage">
 					<StackPanel Orientation="Horizontal">
@@ -123,6 +123,18 @@
 							  Fill="{StaticResource UnoGreenColor}"
 							  Data="{StaticResource IconSplit}" />
 						<TextBlock Text="TwoPaneView" />
+					</StackPanel>
+				</muxc:NavigationViewItem>
+
+				<!-- Expander -->
+				<muxc:NavigationViewItem Tag="ExpanderPage">
+					<StackPanel Orientation="Horizontal">
+						<Path Width="16"
+							  Stretch="Uniform"
+							  Margin="0,0,8,0"
+							  Fill="{StaticResource UnoGreenColor}"
+							  Data="{StaticResource IconExpand}" />
+						<TextBlock Text="Expander" />
 					</StackPanel>
 				</muxc:NavigationViewItem>
 			</muxc:NavigationView.MenuItems>
