--- a/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/HomePage.xaml
+++ b/UI/UnoEthereumBlockChain/DemoApp/DemoApp/DemoApp.Shared/HomePage.xaml
@@ -6,7 +6,8 @@
     xmlns:vm="using:DemoApp.ViewModels"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="Black">
 
     <Page.DataContext>
         <vm:HomeViewModel/>
